# gopos-python

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
gopos/: client.py
gopos/models/: __init__.py  address.py  health.py  timezone.py
tests/: conftest.py  start-gopos.sh
tests/routes/: test_health.py  test_parse_address.py  test_timezone.py
