[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0.0"]

[tool.poetry]
authors = ["Pieter De Clercq <pieterdeclercq@outlook.com>"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux"
]
description = "Python bindings for gopos (https://github.com/thepieterdc/gopos)."
homepage = "https://github.com/thepieterdc/gopos-python"
keywords = ["bindings", "gopos"]
license = "Apache Software License 2.0"
name = "gopos"
readme = "README.md"
repository = "https://github.com/thepieterdc/gopos-python"
version = "1.0.0"

[tool.poetry.dependencies]
dacite = "^1.2.0"
python = "^3.8"
requests = "^2.21.0"

[tool.poetry.dev-dependencies]
black = "^22.1"
pre-commit = "^3.0.2"
pytest = "^7.1.1"

[tool.pytest.ini_options]
norecursedirs =[".git", "__pycache__", "dist"]